--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext js,vue ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "lodash": "^4.17.21",
     "vue": "^3.0.5"
   },
