--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "lodash": "^4.17.21",
+    "scrollreveal": "^4.0.9",
     "vue": "^3.0.5"
   },
   "devDependencies": {
