--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-plus": "^1.0.2-beta.40",
     "lodash": "^4.17.21",
     "scrollreveal": "^4.0.9",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.6"
   },
   "devDependencies": {
     "@fireworkweb/eslint-config": "^1.0.0",
