--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "element-plus": "^1.0.2-beta.40",
     "lodash": "^4.17.21",
-    "scrollreveal": "^4.0.9",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.6"
+    "vue-router": "^4.0.6",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@fireworkweb/eslint-config": "^1.0.0",
